<resources>
    <string name="app_name">lab2.2</string>
    <string name="night_dress_navailable_in_many_colors">Night dress \navailable in many colors</string>
    <string name="night_dress_navailable_in_many_colors1">Night dress \navailable in many colors</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="add_to_cart_bt">Add to cart</string>
    <string name="available_within_2_4_business_days_express_delivery_available">Available within 2-4 business days Express - Delivery available</string>
    <string name="details">Details</string>
    <string name="various_leather_applications_and_patches_n_rib_knit_cuffs_and_hem_n_contains_non_textile_parts_of_animal_origin_n_length_medium">- various leather applications and patches.\n- Rib knit cuffs and hem.\n- Contains non-textile parts of animal origin\n- Length: medium</string>
</resources>
