<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorscoll"
    tools:context="com.example.admin.lab22.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_image"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/girldressing"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/imageView2" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorBackground"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_dress_navailable_in_many_colors1"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tv_night"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_below="@id/tv_night"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/add_to_cart"
                    android:textSize="13dp"
                    android:textColor="@color/colorWhite"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:background="@color/colorOrange"
                    android:textStyle="normal"
                    />
                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_night"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/heartshape"
                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bookmarkshape"

                        />
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shareshape"
                        />

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <!--phan 2-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_image"
            android:id="@+id/rl_color"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:id="@+id/tv_colors"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tv_colors"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/black"
                    android:layout_marginRight="20dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lightblue"
                    android:layout_marginRight="10dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/darkblue"
                    android:layout_marginLeft="10dp"

                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/orange"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>
        </RelativeLayout>

        <!--phan 3-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_color"
            android:id="@+id/rl_size"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizes"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:id="@+id/tv_size"
                />
            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tv_size"
                android:layout_centerInParent="true"
                android:gravity="center"

                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/s"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="10dp"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/orange"
                    android:layout_marginLeft="45dp"

                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/m"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/l"
                    android:layout_marginLeft="115dp"
                    android:layout_marginTop="10dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/xl"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="10dp"
                    />
                
            </RelativeLayout>

        </RelativeLayout>

        <!--phan 3-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_size"
            android:layout_marginTop="10dp"
            android:text="@string/add_to_cart_bt"
            android:layout_centerInParent="true"
            android:textSize="12dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorOrange"
            android:id="@+id/bt_add"
            />

        <!--phan 4-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_within_2_4_business_days_express_delivery_available"
            android:textSize="15dp"
            android:textColor="@color/colorlightBlack"
            android:layout_below="@id/bt_add"
            android:id="@+id/tv_available"
            />

        <!--phan 5-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/tv_available"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/various_leather_applications_and_patches_n_rib_knit_cuffs_and_hem_n_contains_non_textile_parts_of_animal_origin_n_length_medium"
                android:textColor="@color/colorlightBlack"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
